# numerical_integration

./: CMakeLists.txt  func.cpp  func.h  main.cpp  main_test.cpp
sciplot/: CMakeLists.txt
